css/styles.css
body { margin: 0; padding: 0; zoom: 1; }

.nav a {
    color: #5a5a5a;
    font-size: 11px;
    font-weight: bold;
    padding-top: 14px;
    padding-bottom: 14px;
    padding-left: 10px;
    padding-right:10px;
    text-transform: uppercase;
}

.container {
    width:960px;
    margin:0 left;
}

.hello {
    min-height: 400px;
    background-color: gray;
    padding: 40px 20px 80px 20px;
}

.hello h1{
    color: #000000;
    font-size: 48px;
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
    padding: 20px 20px 0 20px;
    line-height: 38px;
}

.hello p{
    color: #C2C2C2;
    font-size:20px;
    font-family: 'Gentium Basic';
    padding: 20px 20px 0 20px;
    max-width: 500px
}

.ventures {
    height: 800px;
    background-image: url('');
    padding: 40px 20px 80px 20px;
}

.ventures h1{
    color: #000000;
    font-size: 48px;
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
    padding: 20px 20px 0 20px;
}

.ventures p{
    color: #ccc;
    font-size:20px;
    font-family: 'Gentium Basic';
    padding: 20px 20px 0 20px;
    max-width: 500px
}

.ventures img{
    padding: 20px 20px 0 20px;
}

.livework {
    height: 800px;
    background: url(../img/livework.jpg) no-repeat left; 
    background-attachment: fixed;
    /*background-size: cover;*/
    padding: 40px 20px 80px 20px;
}

.livework h1{
    color: #000000;
    font-size: 48px;
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
    padding: 20px 20px 0 20px;

}

.livework p{
    color: #ccc;
    font-size:20px;
    font-family: 'Gentium Basic';
    padding: 20px 20px 0 20px;
    max-width: 500px;
}

.livework ul{
    color:#ccc;
    font-size:18px;
    font-family: 'Gentium Basic';
    padding: 40px 20px 0 20px;
    max-width: 500px;
}

.eise {
    height: 380px;
    background: url(../img/eise.jpg) no-repeat left;
    padding: 0px 20px 80px 20px;
}

.eise h1{
    color: #000000;
    font-size: 48px;
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
    padding: 0px 20px 0 20px;
    line-height: 20px;
    margin-bottom:0;
}

.eise h2{
    color: #000000;
    font-size: 24px;
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
    padding: 0px 20px 0 20px;
    line-height: 18px
}

.eise p{
    color: #ccc;
    font-size:20px;
    font-family: 'Gentium Basic';
    padding: 20px 20px 0 20px;
    max-width: 500px

}
.dtbr {
    height: 800px;
    background-color: #F9C232;
    padding: 40px 20px 80px 20px;
}

.dtbr .container { 
	width: 100%; 
	min-height: 400px; 
	-webkit-font-smoothing:antialiased; 
	text-rendering:optimizeLegibility; 
}

.dtbr h1{
    color: #000000;
    text-transform: uppercase;
    padding: 20px 20px 0 20px;
    line-height: 38px;
    font-size: 48px;
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
}

.dtbr p{
    color: #2D2D2D;
    font-size:20px;
    font-family: 'Gentium Basic';
    max-width:500px;
    padding:20px 20px 0 20px;
}

.servir-bem {
    height: 800px;
    background-image: url('');
    padding: 40px 20px 80px 20px;
}

.servir-bem h1{
    color: #000000;
    font-size: 48px;
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
    padding: 20px 20px 0 20px;
    line-height: 40px;
    text-decoration: underline;
    font-style: italic;

}

.servir-bem p{
    color: #ccc;
    font-size:20px;
    font-family: 'Gentium Basic';
    padding: 20px 20px 0 20px;
    max-width: 500px
}

.speaking {
    height: 800px;
    background-color: black;
    background: url(../img/speaking.jpg) no-repeat top left; 
    background-attachment: fixed;
    padding: 40px 20px 80px 20px;
}

.speaking h1{
    color: #FFFFFF;
    font-size: 48px;
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
    padding: 20px 20px 0 20px;
}

.speaking p{
    color: #ccc;
    font-size:20px;
    font-family: 'Gentium Basic';
    padding: 20px 20px 0 20px;
    max-width: 400px
}

.teaching {
    height: 800px;
    background-color: white;
    padding: 40px 20px 80px 20px;
}

.teaching h1{
    color: #000000;
    font-size: 48px;
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
    padding: 20px 20px 0 20px;
}

.teaching p{
    color: #ccc;
    font-size:20px;
    font-family: 'Gentium Basic';
    padding: 20px 20px 0 20px;
    max-width: 500px
}

.press {
    height: 400px;
    background-color: black;
    padding: 40px 20px 80px 20px;
}

.press h1{
    color: #ccc;
    font-size: 24px;
    font-weight: bold;
    font-family: 'Open+Sans', sans-serif;
    padding: 20px 20px 0 20px;

}

.press p{
    color: #ccc;
    font-size:20px;
    font-family: 'Gentium+Book';
    padding: 20px 20px 0 20px;
    max-width: 500px

}

.footer {
    height:300px;
    background-color: #f7f7f7;
    padding: 40px 20px 80px 20px;

}

.footer .colophon {
    width: 300px; 
    display: inline-block; 
    vertical-align: top; 
    text-align: left; 
    margin: 0 7px 30px 10px; 
}

.footer h3{
    font-family: 'Shift', sans-serif;
    font-size: 18px;
    font-weight: bold;
}

.footer a{
    color: #00b0ff;
}

